--- a/package.json
+++ b/package.json
@@ -1,15 +1,38 @@
 {
   "name": "cypress-coverage",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "see-cy-coverage": "open ./cypress-coverage/lcov-report/index.html",
     "start": "next start"
   },
   "dependencies": {
     "next": "9.5.4",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "nyc": {
+    "extends": "./.nycrc.json",
+    "report-dir": "cypress-coverage",
+    "reporter": [
+      "json",
+      "lcov"
+    ]
+  },
+  "devDependencies": {
+    "@cypress/browserify-preprocessor": "^3.0.1",
+    "@cypress/code-coverage": "^3.8.1",
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@testing-library/cypress": "^7.0.1",
+    "@types/node": "^14.11.7",
+    "@types/react": "^16.9.51",
+    "@types/react-dom": "^16.9.8",
+    "@types/testing-library__cypress": "^5.0.8",
+    "babel-plugin-istanbul": "^6.0.0",
+    "cypress": "^5.3.0",
+    "nyc": "^15.1.0",
+    "typescript": "^4.0.3"
   }
 }
