--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.5.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "next": "13.0.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "nyc": {
     "extends": "./.nycrc.json",
@@ -23,17 +23,16 @@
     ]
   },
   "devDependencies": {
-    "@cypress/browserify-preprocessor": "^3.0.1",
-    "@cypress/code-coverage": "^3.8.1",
-    "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@testing-library/cypress": "^7.0.1",
-    "@types/node": "^14.11.7",
-    "@types/react": "^16.9.51",
-    "@types/react-dom": "^16.9.8",
-    "@types/testing-library__cypress": "^5.0.8",
-    "babel-plugin-istanbul": "^6.0.0",
-    "cypress": "^5.3.0",
-    "nyc": "^15.1.0",
-    "typescript": "^4.0.3"
+    "@cypress/browserify-preprocessor": "3.0.2",
+    "@cypress/code-coverage": "3.10.0",
+    "@testing-library/cypress": "8.0.7",
+    "@types/node": "18.11.13",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.9",
+    "@types/testing-library__cypress": "5.0.9",
+    "babel-plugin-istanbul": "6.1.1",
+    "cypress": "12.0.2",
+    "nyc": "15.1.0",
+    "typescript": "4.9.4"
   }
 }
